Switch from JetBrains annotations to JSpecify
JSpecify is more unified and allows setting default nullability. A module-info.java file has been created and the module has benn NullMarked, requiring values to be non-null by default.